--- a/css/main.css
+++ b/css/main.css
@@ -2,17 +2,55 @@
     padding: 0;
     margin: 0;
 }
+#wrapper{
+    height: 100%;
+    width: 100%
+}
 header{
-   height: 400px;
-   width: 500px;
+   height: 100vh;
+   width: 100vw;
    overflow: hidden;
    position:relative;
+   display: flex;
+   flex-direction: column;
 }
 #vid{
+    height: 100%;
+    width: 100%;
     position: absolute;
     top:0;
     left: 0;
 }
 #slide{
     width: 400px;
+}
+#controls{
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    position: fixed;
+    bottom: 0;
+}
+#wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#leftRight{
+    display: flex;
+    flex-direction: row;
+}
+#zoomMove{
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+#zoomControls{
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 35px;
+    align-items: ;
 }
