Added switch for zoom panel.

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ header{
 }
 #zoomControls{
     justify-content: center;
-    display: flex;
+    display: none;
     flex-direction: row;
     flex-wrap: wrap;
     width: 35px;
