--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,16 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Roboto';
 }
 #wrapper{
     height: 100%;
     width: 100%
+}
+button{
+    background-color: rgba(0,0,0,0);
+    color: white;
+    border: none;
 }
 header{
    height: 100vh;
@@ -26,7 +32,7 @@ header{
 }
 #controls{
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(4, 3, 3, 1);
     color: white;
     position: fixed;
     bottom: 0;
@@ -56,5 +62,185 @@ header{
 }
 #volumeControls{
     display: flex;
-    
+
+}
+#slide{
+    width: 100%;
+}
+#secLevelControls{
+    display: flex;
+}
+
+/* Range CSS */
+input[type=range].mainSlider {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 0px 0;
+}
+input[type=range].mainSlider:focus {
+  outline: none;
+}
+input[type=range].mainSlider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #efb0a1;
+  border-radius: 0px;
+  border: 0px solid #010101;
+}
+input[type=range].mainSlider::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 2.9px solid #8a4f7d;
+  height: 10px;
+  width: 20px;
+  border-radius: 28px;
+  background: #521945;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: 0px;
+}
+input[type=range].mainSlider:focus::-webkit-slider-runnable-track {
+  background: #f3c2b7;
+}
+input[type=range].mainSlider::-moz-range-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #efb0a1;
+  border-radius: 0px;
+  border: 0px solid #010101;
+}
+input[type=range].mainSlider::-moz-range-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 2.9px solid #8a4f7d;
+  height: 10px;
+  width: 20px;
+  border-radius: 28px;
+  background: #521945;
+  cursor: pointer;
+}
+input[type=range].mainSlider::-ms-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range].mainSlider::-ms-fill-lower {
+  background: #eb9e8b;
+  border: 0px solid #010101;
+  border-radius: 0px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range].mainSlider::-ms-fill-upper {
+  background: #efb0a1;
+  border: 0px solid #010101;
+  border-radius: 0px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range].mainSlider::-ms-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 2.9px solid #8a4f7d;
+  width: 20px;
+  border-radius: 28px;
+  background: #521945;
+  cursor: pointer;
+  height: 10px;
+}
+input[type=range].mainSlider:focus::-ms-fill-lower {
+  background: #efb0a1;
+}
+input[type=range].mainSlider:focus::-ms-fill-upper {
+  background: #f3c2b7;
+}
+
+
+
+input[type=range].volSlider {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 12px 0;
+}
+input[type=range].volSlider:focus {
+  outline: none;
+}
+input[type=range].volSlider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+  background: #efb0a1;
+  border-radius: 0px;
+  border: 0px solid #010101;
+}
+input[type=range].volSlider::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 2.9px solid #8a4f7d;
+  height: 10px;
+  width: 20px;
+  border-radius: 28px;
+  background: #521945;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -4px;
+}
+input[type=range].volSlider:focus::-webkit-slider-runnable-track {
+  background: #f3c2b7;
+}
+input[type=range].volSlider::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+  background: #efb0a1;
+  border-radius: 0px;
+  border: 0px solid #010101;
+}
+input[type=range].volSlider::-moz-range-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 2.9px solid #8a4f7d;
+  height: 10px;
+  width: 20px;
+  border-radius: 28px;
+  background: #521945;
+  cursor: pointer;
+}
+input[type=range].volSlider::-ms-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range].volSlider::-ms-fill-lower {
+  background: #eb9e8b;
+  border: 0px solid #010101;
+  border-radius: 0px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+}
+input[type=range].volSlider::-ms-fill-upper {
+  background: #efb0a1;
+  border: 0px solid #010101;
+  border-radius: 0px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+}
+input[type=range].volSlider::-ms-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 2.9px solid #8a4f7d;
+  height: 10px;
+  width: 20px;
+  border-radius: 28px;
+  background: #521945;
+  cursor: pointer;
+  height: 2px;
+}
+input[type=range].volSlider:focus::-ms-fill-lower {
+  background: #efb0a1;
+}
+input[type=range].volSlider:focus::-ms-fill-upper {
+  background: #f3c2b7;
 }
