--- a/css/main.css
+++ b/css/main.css
@@ -42,8 +42,10 @@ header{
 #controls:hover{
     opacity: 1;
 }
-button:focus {outline:0;}
-button i{
+button:focus {
+    outline:0;
+}
+.material-icons{
     -webkit-user-select: none; /* Chrome/Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
