--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,8 @@ button:focus {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: ;
+    border: 0.5px solid white;
+    border-radius: 5px;
 }
 #volumeControls{
     display: flex;
